# kvp

./: CITATION.cff  Makefile  README.md  make.bat  pyproject.toml  setup.py
docs/: .buildinfo  changelog.html  genindex.html  index.html  install.html  objects.inv  ot_event.html  py-modindex.html  results.html  safe_signal.html  search.html  searchindex.js  user.html
docs/_modules/: index.html
docs/_modules/kvp/: api.html  picker.html
docs/_sources/: changelog.rst.txt  index.rst.txt  install.rst.txt  ot_event.rst.txt  results.rst.txt  safe_signal.rst.txt  user.rst.txt
examples/: das_event.py  obs_uninterpreted_signal.py
examples/OT/: KVP_event_O0900.sac  KVP_event_O0901.sac  KVP_event_O0902.sac  KVP_event_O0903.sac  KVP_event_O0904.sac  KVP_event_O0905.sac  KVP_event_O0906.sac  KVP_event_O0907.sac  KVP_event_O0908.sac  KVP_event_O0909.sac  KVP_event_O0910.sac  KVP_event_O0911.sac  KVP_event_O0912.sac  KVP_event_O0913.sac  KVP_event_O0914.sac  KVP_event_O0915.sac  KVP_event_O0916.sac  KVP_event_O0917.sac  KVP_event_O0918.sac  KVP_event_O0919.sac  KVP_event_O0920.sac  KVP_event_O0921.sac  KVP_event_O0922.sac  KVP_event_O0923.sac  KVP_event_O0924.sac  KVP_event_O0925.sac  KVP_event_O0926.sac  KVP_event_O0927.sac  KVP_event_O0928.sac  KVP_event_O0929.sac  KVP_event_O0930.sac  KVP_event_O0931.sac  KVP_event_O0932.sac  KVP_event_O0933.sac  KVP_event_O0934.sac  KVP_event_O0935.sac
examples/SAFE/: KVP_signal_OBS02.sac
kvp/: __init__.py  api.py  callers.py  cf.py  filter.py  trigger.py
kvp/src/: cf.c  cf.h  filter.c  filter.h  jumps.c  kurtosis.c  picker.c  picker.h
