[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kvp"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = ["numpy>=1.23",
                "fancy-ctypes"]

[tool.setuptools.packages.find]
where = [""]
exclude = ["docs*"]

[tool.setuptools.package-data]
kvp = ["lib/libkvp-*.*"]

[tool.setuptools.exclude-package-data]
kvp = ["src"]


[tool.setuptools.dynamic]
version = {attr = "kvp.__version__"}
